# TelloControl

./: .gitignore  COMO_CALIBRAR_CAMERA.md  README.md  install.sh  source_workspace.sh  tello.urdf  testtello.py
src/tello_control_pkg/: CMakeLists.txt  package.xml
src/tello_control_pkg/config/: lqi_runtime_gazebo.yaml  lqi_runtime_real.yaml  lqi_tuning_example.yaml  lqi_tuning_gazebo.yaml  lqi_tunning_real.yaml  pid_indoor_safe.yaml  plant_model_example.yaml
src/tello_control_pkg/experiments_ident/ident_gazebo/: identification_summary.txt  identified_gammas.yaml
src/tello_control_pkg/experiments_ident/ident_gazebo/plots/: ExpX_Sine1_model_vs_measured.csv  ExpX_Sine2_model_vs_measured.csv  ExpX_Sine3_model_vs_measured.csv  ExpY_Sine1_model_vs_measured.csv  ExpY_Sine2_model_vs_measured.csv  ExpY_Sine3_model_vs_measured.csv  ExpYaw_Sine1_model_vs_measured.csv  ExpYaw_Sine2_model_vs_measured.csv  ExpYaw_Sine3_model_vs_measured.csv  ExpZ_Sine1_model_vs_measured.csv  ExpZ_Sine2_model_vs_measured.csv  ExpZ_Sine3_model_vs_measured.csv
src/tello_control_pkg/experiments_ident/ident_real/: identification_summary.txt  identified_gammas.yaml
src/tello_control_pkg/experiments_ident/ident_real/plots/: ExpTodos_manual_x_model_vs_measured.csv  (+14 more)
src/tello_control_pkg/experiments_lqi/lqi_tuning_real/: lqi_tuned.yaml  summary.json  summary.txt
src/tello_control_pkg/experiments_lqi/robust_near_zero_ov/: lqi_tuned.yaml  summary.json  summary.txt
src/tello_control_pkg/include/tello_control_pkg/: controller_interface.hpp
src/tello_control_pkg/launch/: launch_tello_control.py
src/tello_control_pkg/msg/: ControlStatus.msg
src/tello_control_pkg/scripts/: COMMANDS_WORKFLOW.txt  analyze_control_latency.py  identify_drone_plant.py  simulate_drone_plant.py  tune_lqi_robust.py  validate_lqi_robust.py
src/tello_control_pkg/src/: tello_control_node.cpp
src/tello_control_pkg/src/controllers/: lqi_controller.cpp  mpc_controller.cpp  pid_controller.cpp
(+49 files in other folders)
